# wasipy

./: Cargo.toml  README.md
executor/: Cargo.toml
executor/src/: lib.rs  python.rs
executor/wit/: executor.wit
server/: Cargo.toml
server/src/: main.rs
