[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
rustpython = { git = "https://github.com/RustPython/RustPython.git", default-features = false, features = ["freeze-stdlib", "stdlib"] }
wasi = "0.14.2"
wit-bindgen = "0.44.0"

[profile.dev]
opt-level = 1
